# esp32-first-test

./: CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  parse_config.c  parse_config.h
server_certs/: ca_cert.pem
